@@ -1,10 +1,9 @@
 [Activity]
-#TRANS: Please translate Visual Match as Dimensions
-name = Visual Match
-activity_version = 49
+name = Dimensions
+activity_version = 51
 license = GPLv3
-bundle_id = org.sugarlabs.VisualMatchActivity
-exec = sugar-activity VisualMatchActivity.VisualMatchActivity
-icon = activity-visualmatch
+bundle_id = org.sugarlabs.Dimensions
+exec = sugar-activity Dimensions.Dimensions
+icon = activity-dimensions
 show_launcher = yes
 summary = a pattern-matching game
