@@ -1,3 +1,8 @@
+51
+
+* Add support for screen rotation
+* Make separate games for shapes, numbers, and words
+
 49
 
 * New translations
